k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-api
  namespace: fintech-risk
spec:
  selector:
    app: fraud-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
