k8s/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-dashboard
  namespace: fintech-risk
spec:
  selector:
    app: fraud-dashboard
  ports:
    - name: http
      port: 8501
      targetPort: 8501
  type: ClusterIP
