k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintech-risk-ingress
  namespace: fintech-risk
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: fintech-risk.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fraud-api
                port:
                  number: 8000
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fraud-dashboard
                port:
                  number: 8501
